# LSM

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh
app/: CMakeLists.txt  main.cpp
bindings/cpp_to_rust/: CMakeLists.txt  audio_ffi.cpp  audio_ffi.h  camera_ffi.cpp  camera_ffi.h  video_ffi.h
bindings/rust_to_cpp/: lib.rs
core/: CMakeLists.txt  main_video_test.cpp
core/audio/: AudioFrame.h  AudioSource.h  MicrophoneSource.cpp  MicrophoneSource.h  SpeakerSink.cpp  SpeakerSink.h
core/streaming/: StreamController.cpp  StreamController.h
core/utils/: logger.cpp  logger.h  memory_pool.cpp  memory_pool.h
core/video/: CameraSource.cpp  CameraSource.h  ScreenSource.cpp  ScreenSource.h  SourceManager.cpp  SourceManager.h  VideoFrame.h  VideoSource.h
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  kim_seungwoo_module_design.md  kim_seungwoo_module_features.md
rust-modules/audio-dsp/: Cargo.toml
rust-modules/audio-dsp/src/: lib.rs  mixer.rs
rust-modules/video-encoder/: Cargo.toml
rust-modules/video-encoder/src/: lib.rs  pipeline.rs
tests/cpp/: CMakeLists.txt  test_audio_loopback.cpp  test_av_integration.cpp  test_camera_integration.cpp  test_core.cpp  test_device_switching.cpp
